# futu-quant

./: .gitignore  README.md  dynamic_market.py  indicator.py  main.py  market.py  market_us.py  multi_period_monitor.py  pyproject.toml  watchlist_config.py
docs/: strategy-design.md
examples/: get_cur_kline.py  get_indicator_list.py  get_user_security.py  get_user_security_group.py  main.py  on_recv_rsp_1m.py  on_recv_rsp_minute.py  reminder.py  request_history_kline.py  request_indicator_calc_async.py  smic_15m_bbi_boll.py
hardcode/: main.py  market.py  market_us.py  multi_period_monitor.py
src/futu_quant/: __init__.py
src/futu_quant/backtest/: __init__.py
src/futu_quant/broker/: __init__.py
src/futu_quant/config/: strategy_defaults.py
src/futu_quant/core/: __init__.py  enums.py  models.py
src/futu_quant/data/: __init__.py
src/futu_quant/indicators/: __init__.py  bbi.py  boll.py
src/futu_quant/strategies/: bbi_boll.py  timeframes.py
tests/: test_indicators.py  test_timeframes.py
